fix date picker disappearing if you click too close to it

--- a/html/assets/css/tapin.css
+++ b/html/assets/css/tapin.css
@@ -45,6 +45,7 @@
 
 #see-videos {
     float:right;
+    margin-right: -15px;
 }
 #video-meta {
     margin-bottom: 9px;
